# scterm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: arch-qa.md  flaky-test-qa.md  quality-mgr.md  registry.yaml  req-qa.md  rust-architect.md  rust-code-explorer.md  rust-code-reviewer.md  rust-developer.md  rust-qa-agent.md  test-stability-auditor.md
.claude/commands/: cargo-clean.md  team-join.md  team-status.md
.claude/skills/codex-orchestration/: SKILL.md  dev-template.xml.j2  qa-template.xml.j2  review-template.xml.j2
.claude/skills/rust-development/: SKILL.md
.claude/skills/sprint-report/: SKILL.md  report-detailed.md.j2  report.md.j2
.github/workflows/: ci.yml
docs/: architecture.md  atm-bridge-spec.md  compatibility-matrix.md  crate-boundaries.md  cross-platform-guidelines.md  dependency-policy.md  error-model.md  implementation-plan.md  project-plan.md  protocol.md  public-api-checklist.md  requirements.md  state-machines.md  team-protocol.md  testing-strategy.md
docs/archive/: implementation-plan.md
docs/scterm-app/: architecture.md  requirements.md
docs/scterm-atm/: architecture.md  bridge-spec.md  requirements.md
docs/scterm-core/: architecture.md  requirements.md
docs/scterm-unix/: architecture.md  requirements.md
pm/: arch-cterm.md  arch-term.md
scterm-app/: Cargo.toml
scterm-app/src/: atm.rs  attach.rs  cli.rs  lib.rs  logging.rs  main.rs  master.rs  storage.rs
scterm-app/src/cli/: args.rs  dispatch.rs  session.rs
scterm-app/tests/: cli_compat.rs  session_orchestration.rs
scterm-atm/: Cargo.toml
scterm-atm/src/: lib.rs
scterm-core/: Cargo.toml
scterm-core/src/: ancestry.rs  error.rs  lib.rs  packet.rs  process_lock.rs  ring.rs  state.rs  types.rs
scterm-unix/: Cargo.toml
scterm-unix/src/: error.rs  lib.rs  process.rs  process_lock.rs  pty.rs  raw_mode.rs  signal.rs  socket.rs
scterm-unix/tests/: unix_runtime.rs
