[package]
name = "scterm-app"
version = "0.1.0"
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "scterm"
path = "src/main.rs"

[features]
default = []
atm = ["dep:scterm-atm"]

[dependencies]
anyhow = "1"
nix = { version = "0.29", features = ["poll", "process", "signal", "term", "user"] }
serde_json = "1"
scterm-atm = { path = "../scterm-atm", optional = true }
scterm-core = { path = "../scterm-core" }
scterm-unix = { path = "../scterm-unix" }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
