[package]
name = "scterm-app"
version = "0.1.0"
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "scterm"
path = "src/main.rs"

[features]
default = []
atm = ["dep:scterm-atm"]

[dependencies]
anyhow = "1"
nix = { version = "0.29", features = ["poll", "process", "signal", "term", "user"] }
# Path dep until sc-observability is published to crates.io.
# Replace with a version constraint once the publish is complete.
sc-observability = { path = "../../../../sc-observability/crates/sc-observability" }
sc-observability-types = { path = "../../../../sc-observability/crates/sc-observability-types" }
time = "0.3"
scterm-atm = { path = "../scterm-atm", optional = true }
scterm-core = { path = "../scterm-core" }
scterm-unix = { path = "../scterm-unix" }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
