[package]
name = "scterm-atm"
version = "0.1.0"
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scterm-core = { path = "../scterm-core" }
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
