[package]
name = "scterm-core"
version = "0.1.0"
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
